// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deletes a file correctly 1`] = `
<div>
  <div
    class="ui basic segment ui container one column grid"
  >
    <div
      class="sixteen wide column"
    >
      <h2
        class="ui header"
      >
        Upload Study Documents for DRC Approval
      </h2>
      <table
        class="ui selectable stackable very basic very compact table"
      >
        <tbody
          class=""
        >
          <tr
            class="cursor-pointer"
            data-testid="file-item"
          >
            <td
              class="collapsing single line center aligned"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending review
              </div>
            </td>
            <td
              class=""
            >
              <span
                class="ui medium header"
              >
                organization.jpeg
              </span>
              <p>
                Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
              </p>
              <div
                class="ui bulleted horizontal list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <button
                    class="ui mini basic icon left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    SF_5ZPEM167
                  </button>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    Created 
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    5.5 kB
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
            </td>
            <td
              class="center aligned"
            >
              <div
                class="ui mini vertical buttons"
              >
                <button
                  class="ui basic icon button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                </button>
                <button
                  class="ui basic icon button"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="ui divider"
      />
      <div
        class="row"
      >
        <form>
          <div
            class="ui placeholder piled segment"
          >
            <div
              class="ui icon header"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              To upload Study Documents drag and drop a file here
              <br />
              <small>
                or
              </small>
            </div>
            <br />
            <label
              class="ui icon primary left labeled button"
              for="file"
              role="button"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              Choose a file
            </label>
            <input
              hidden=""
              id="file"
              multiple=""
              type="file"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <div
    class="ui basic segment ui container one column grid"
  >
    <div
      class="sixteen wide column"
    >
      <h2
        class="ui header"
      >
        Upload Study Documents for DRC Approval
      </h2>
      <table
        class="ui selectable stackable very basic very compact table"
      >
        <tbody
          class=""
        >
          <tr
            class="cursor-pointer"
            data-testid="file-item"
          >
            <td
              class="collapsing single line center aligned"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending review
              </div>
            </td>
            <td
              class=""
            >
              <span
                class="ui medium header"
              >
                organization.jpeg
              </span>
              <p>
                Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
              </p>
              <div
                class="ui bulleted horizontal list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <button
                    class="ui mini basic icon left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    SF_5ZPEM167
                  </button>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    Created 
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    5.5 kB
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="hospital icon"
                  />
                   Clinical/Phenotype Data
                </div>
              </div>
            </td>
            <td
              class="center aligned"
            >
              <div
                class="ui mini vertical buttons"
              >
                <button
                  class="ui basic icon button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                </button>
                <button
                  class="ui basic icon button"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="cursor-pointer"
            data-testid="file-item"
          >
            <td
              class="collapsing single line center aligned"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending review
              </div>
            </td>
            <td
              class=""
            >
              <span
                class="ui medium header"
              >
                its.mp3
              </span>
              <p>
                Question meeting move recognize.
              </p>
              <div
                class="ui bulleted horizontal list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <button
                    class="ui mini basic icon left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    SF_Y07IN1HO
                  </button>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    Created 
                    <time
                      datetime="2019-04-06T07:51:17.000Z"
                      title="2019-04-06T07:51:17+00:00"
                    >
                      2 weeks ago
                    </time>
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <div
                    class="description"
                  >
                    6.8 kB
                  </div>
                </div>
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="shipping icon"
                  />
                   Shipping Manifest
                </div>
              </div>
            </td>
            <td
              class="center aligned"
            >
              <div
                class="ui mini vertical buttons"
              >
                <button
                  class="ui basic icon button"
                >
                  <i
                    aria-hidden="true"
                    class="download icon"
                  />
                </button>
                <button
                  class="ui basic icon button"
                  data-testid="delete-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash alternate icon"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="ui divider"
      />
      <div
        class="row"
      >
        <form>
          <div
            class="ui placeholder piled segment"
          >
            <div
              class="ui icon header"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              To upload Study Documents drag and drop a file here
              <br />
              <small>
                or
              </small>
            </div>
            <br />
            <label
              class="ui icon primary left labeled button"
              for="file"
              role="button"
            >
              <i
                aria-hidden="true"
                class="file outline icon"
              />
              Choose a file
            </label>
            <input
              hidden=""
              id="file"
              multiple=""
              type="file"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows an error 1`] = `
<div>
  <div
    class="ui basic segment ui container"
  >
    <div
      class="ui icon negative message"
    >
      <i
        aria-hidden="true"
        class="warning circle icon"
      />
      <div
        class="content"
      >
        <div
          class="header"
        >
          Error
        </div>
        <p>
          Network error: something went wrong
        </p>
      </div>
    </div>
  </div>
</div>
`;
